; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/extr_pcm_native.c_snd_pcm_action_single.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/extr_pcm_native.c_snd_pcm_action_single.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.action_ops = type { i32 (%struct.snd_pcm_substream*, i32)*, i32 (%struct.snd_pcm_substream*, i32)*, i32 (%struct.snd_pcm_substream*, i32)*, i32 (%struct.snd_pcm_substream*, i32)* }
%struct.snd_pcm_substream = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.action_ops*, %struct.snd_pcm_substream*, i32)* @snd_pcm_action_single to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_pcm_action_single(%struct.action_ops* %0, %struct.snd_pcm_substream* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.action_ops*, align 8
  %6 = alloca %struct.snd_pcm_substream*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.action_ops* %0, %struct.action_ops** %5, align 8
  store %struct.snd_pcm_substream* %1, %struct.snd_pcm_substream** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.action_ops*, %struct.action_ops** %5, align 8
  %10 = getelementptr inbounds %struct.action_ops, %struct.action_ops* %9, i32 0, i32 0
  %11 = load i32 (%struct.snd_pcm_substream*, i32)*, i32 (%struct.snd_pcm_substream*, i32)** %10, align 8
  %12 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i32 %11(%struct.snd_pcm_substream* %12, i32 %13)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32, i32* %8, align 4
  store i32 %18, i32* %4, align 4
  br label %50

19:                                               ; preds = %3
  %20 = load %struct.action_ops*, %struct.action_ops** %5, align 8
  %21 = getelementptr inbounds %struct.action_ops, %struct.action_ops* %20, i32 0, i32 1
  %22 = load i32 (%struct.snd_pcm_substream*, i32)*, i32 (%struct.snd_pcm_substream*, i32)** %21, align 8
  %23 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %6, align 8
  %24 = load i32, i32* %7, align 4
  %25 = call i32 %22(%struct.snd_pcm_substream* %23, i32 %24)
  store i32 %25, i32* %8, align 4
  %26 = load i32, i32* %8, align 4
  %27 = icmp eq i32 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %19
  %29 = load %struct.action_ops*, %struct.action_ops** %5, align 8
  %30 = getelementptr inbounds %struct.action_ops, %struct.action_ops* %29, i32 0, i32 3
  %31 = load i32 (%struct.snd_pcm_substream*, i32)*, i32 (%struct.snd_pcm_substream*, i32)** %30, align 8
  %32 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %6, align 8
  %33 = load i32, i32* %7, align 4
  %34 = call i32 %31(%struct.snd_pcm_substream* %32, i32 %33)
  br label %48

35:                                               ; preds = %19
  %36 = load %struct.action_ops*, %struct.action_ops** %5, align 8
  %37 = getelementptr inbounds %struct.action_ops, %struct.action_ops* %36, i32 0, i32 2
  %38 = load i32 (%struct.snd_pcm_substream*, i32)*, i32 (%struct.snd_pcm_substream*, i32)** %37, align 8
  %39 = icmp ne i32 (%struct.snd_pcm_substream*, i32)* %38, null
  br i1 %39, label %40, label %47

40:                                               ; preds = %35
  %41 = load %struct.action_ops*, %struct.action_ops** %5, align 8
  %42 = getelementptr inbounds %struct.action_ops, %struct.action_ops* %41, i32 0, i32 2
  %43 = load i32 (%struct.snd_pcm_substream*, i32)*, i32 (%struct.snd_pcm_substream*, i32)** %42, align 8
  %44 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %6, align 8
  %45 = load i32, i32* %7, align 4
  %46 = call i32 %43(%struct.snd_pcm_substream* %44, i32 %45)
  br label %47

47:                                               ; preds = %40, %35
  br label %48

48:                                               ; preds = %47, %28
  %49 = load i32, i32* %8, align 4
  store i32 %49, i32* %4, align 4
  br label %50

50:                                               ; preds = %48, %17
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
